Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue("text")
        Test(v)
    end

    action Test(text var)
    end
end
